feat: 添加服务器管理和运行总览
